# LoP01

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_DECISIONS.md
.claude/commands/: audit-docs.md  audit-implementation.md  doc-patch.md  first-milestone.md  implement-small.md  review-diff.md  roadmap.md
.github/: copilot-instructions.md
.github/agents/: game-architect.agent.md
.github/instructions/: cpp.instructions.md  gameplay.instructions.md  rendering.instructions.md  ui.instructions.md
.github/prompts/: add-location-scene.prompt.md  bootstrap-vertical-slice.prompt.md  bootstrap-vertical-slice.prompt.md.archived  implement-battle-module.prompt.md  milestone-4-visual-pass.prompt.md  milestone-4-visual-pass.prompt.md.archived  milestone-5-world-loop.prompt.md  milestone-5-world-loop.prompt.md.archived  milestone-6-world-identity.prompt.md  milestone-6-world-identity.prompt.md.archived  milestone-7-services-economy-weekly-cadence.prompt.md  milestone-8-persistent-roster-home-base-mustering.prompt.md  polish-battle-screen.prompt.md  polish-location-screen.prompt.md  polish-overworld-screen.prompt.md
assets/: README.md
content/: artifacts.json  battle_scenarios.json  campaigns.json  enemy_groups.json  events.json  items.json  location_scenes.json  location_services.json  locations.json  quests.json  regions.json  scenario_outcome.json  scenarios.json  trader_curves.json  units.json  world_map.json
data/: locations.json
data/definitions/: LocationDefinition.h
docs/: combat_rules.md  content_schema.md  content_scope_v0.md  content_scope_v0.md.archived  content_scope_v1.md  content_scope_v1.md.archived  content_scope_v2.md  content_scope_v3.md  core_loop_rules.md  game_shell_flow.md  game_vision.md  game_vision_complete.md  game_vision_slice_pitch.md.archived  implementation_roadmap.md  implementation_roadmap.md.00.archived  implementation_roadmap.md.01.archived  implementation_roadmap.md.02.archived  implementation_roadmap.md.03.archived  implementation_roadmap.md.04.archived  implementation_roadmap.md.05.archived  milestone_4_visual_pass.md  milestone_4_visual_pass.md.archived  milestone_5_world_loop.md  milestone_5_world_loop.md.archived  milestone_6_world_identity.md  milestone_6_world_identity.md.archived  milestone_7_services_economy_weekly_cadence.md  milestone_7_services_economy_weekly_cadence.md.archived  milestone_8_persistent_roster_home_base_mustering.md  milestone_8_persistent_roster_home_base_mustering.md.archived  presentation_game_feel.md  scenario_authoring.md  technical_direction.md  terminology_map.md  validation_system.md
docs/complete_visions/: README.md  battle_complete_vision.md  battle_complete_vision.md.archived  location_complete_vision.md  location_complete_vision.md.archived  overworld_complete_vision.md  overworld_complete_vision.md.archived  overworld_select_complete_vision.md  overworld_select_complete_vision.md.archived
src/: Game.cpp  Game.h  Location.cpp  Location.h  Player.cpp  Player.h  Scene.cpp  Scene.h  main.cpp
src/app/: App.cpp  App.h  BattleController.cpp  BattleController.h  BattleEventTextFormatter.cpp  BattleEventTextFormatter.h  CampaignController.cpp  CampaignController.h  LocationController.cpp  LocationController.h  MusteringInteraction.cpp  MusteringInteraction.h  OverworldController.cpp  OverworldController.h  RegionController.cpp  RegionController.h  ShellSelectionRules.cpp  ShellSelectionRules.h  StationingInteraction.cpp  StationingInteraction.h  StorageInteraction.cpp  StorageInteraction.h  TradingPostInteraction.cpp  TradingPostInteraction.h  WorldMapController.cpp  WorldMapController.h  main.cpp
src/app/formatters/: LocationServicePromptFormatter.cpp  LocationServicePromptFormatter.h
src/app/input/: InputAction.h  InputState.h  InputTranslator.cpp  InputTranslator.h
src/app/mappers/: BattleModelMapper.cpp  BattleModelMapper.h  CampaignModelMapper.cpp  CampaignModelMapper.h  HudModelMapper.cpp  HudModelMapper.h  LocationModelMapper.cpp  LocationModelMapper.h  OverworldModelMapper.cpp  OverworldModelMapper.h  OwnedServiceOverviewModelMapper.cpp  OwnedServiceOverviewModelMapper.h  RegionModelMapper.cpp  (+7 more)
src/core/: GameClock.cpp  GameClock.h  SaveGame.cpp  SaveGame.h
src/data/: ContentRepository.cpp  ContentRepository.h  ContentValidator.cpp  ContentValidator.h
src/gameplay/: EnemyOccupationRules.h  EnemyTeamState.h  EnergyRules.h  GameSession.cpp  GameSession.h  InventoryState.h  ResourceState.h
src/rendering/: BattleRenderer.cpp  BattleRenderer.h  CampaignSelectRenderer.cpp  CampaignSelectRenderer.h  DebugOverlay.cpp  DebugOverlay.h  HudRenderer.cpp  HudRenderer.h  LocationRenderer.cpp  LocationRenderer.h  OverworldRenderer.cpp  OverworldRenderer.h  OwnedServiceOverviewRenderer.cpp  OwnedServiceOverviewRenderer.h  RegionRenderer.cpp  RegionRenderer.h  RenderContext.h  ScenarioResultRenderer.cpp  ScenarioResultRenderer.h  TitleRenderer.cpp  TitleRenderer.h  UiTheme.h  WorldMapRenderer.cpp  WorldMapRenderer.h
tests/: ArtifactContentTests.cpp  ArtifactRulesTests.cpp  AutoResolveTests.cpp  BattleArtifactStatTests.cpp  BattleEventTextFormatterTests.cpp  BattleFactoryTests.cpp  BattleTests.cpp  CMakeLists.txt  CampaignCarryoverTests.cpp  CampaignContentTests.cpp  CampaignControllerTests.cpp  CampaignEndToEndTests.cpp  CampaignProgressionRulesTests.cpp  CampaignSaveGameTests.cpp  CampaignStartupTests.cpp  CampaignTransitionTests.cpp  ContentRepositoryReloadTests.cpp  ContentRepositoryTests.cpp  ContentValidatorTests.cpp  ContestedInfrastructureContentTests.cpp  EconomyEndToEndTests.cpp  EnemyServicePressureTests.cpp  EnemyTeamTests.cpp  EnemyVisibilityTests.cpp  EnergyRulesTests.cpp  EventDefinitionTests.cpp  EventEngineTests.cpp  EventIntegrationTests.cpp  GameClockTests.cpp  GameSessionTests.cpp  InventoryContentTests.cpp  InventoryEndToEndTests.cpp  InventoryEventActionsTests.cpp  InventoryRulesTests.cpp  InventorySaveGameTests.cpp  LocationModelMapperTests.cpp  LocationSceneTests.cpp  LocationServicePromptFormatterTests.cpp  LocationServiceRulesTests.cpp  MinePayoutRulesTests.cpp  (+63 more)
(+76 files in other folders)
